Ex01 - Requisito 4, adiciona eventListeners para os botões, contendo dispatch que vai passar o type de acordo com o botão clicado

--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-Redux.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-Redux.html
@@ -72,6 +72,18 @@
 
       const store = Redux.reducerChangeColor(reducer);
 
+      // 4 - Crie eventListeners que escutam os cliques de cada botão, o Previous color e o Next color , e realizam um dispatch com o respectivo action.type de cada.
+      const previousColorBtn = document.getElementById('previous');
+      const nextColorBtn = document.querySelector('#next');
+
+      addEventListener.previousColorBtn('click', () => {
+        store.dispatch({ typr: "PREVIOUS_COLOR" });
+      });
+
+      addEventListener.nextColorBtn('click', () => {
+        store.dispatch({ typr: "NEXT_COLOR" });
+      });
+
     </script>
   </body>
 </html>
