Ex01-ReduxDNV: cria um store e um reducer com um comportamento padrao de retornar  o state

--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
@@ -37,6 +37,20 @@
         colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
         index: 0,
       };
+
+      const store = Redux.createStore(reducer);
+
+      const reducer = (state = INITIAL_STATE, action) => {
+        switch (action.type) {
+          case ALGO:
+            return {
+              ...state, 
+            };      
+          default:
+            return state;
+        }
+      };
+
     </script>
   </body>
 </html>
