--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
@@ -1,56 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="https://unpkg.com/redux@latest/dist/redux.min.js"></script>
-    <style>
-      body {
-        height: 100vh;
-        margin: 0;
-        padding: 0;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script src="https://unpkg.com/redux@latest/dist/redux.min.js"></script>
+  <style>
+    body {
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
+
+    #container {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    button {
+      height: 50px;
+      width: 200px;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="container">
+    <p>Color: <span id="value">white</span></p>
+    <button id="previous">Previous color</button>
+    <button id="next">Next color</button>
+  </div>
+  <script>
+    const NEXT_COLOR = "NEXT_COLOR";
+    const PREVIOUS_COLOR = "PREVIOUS_COLOR";
+
+    const actionNextColor = () => ({ type: NEXT_COLOR });
+    const actionPreviousColor = () => ({ type: PREVIOUS_COLOR });
+
+    const INITIAL_STATE = {
+      colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
+      index: 0,
+    };
+
+    const reducer = (state = INITIAL_STATE, action) => {
+      switch (action.type) {
+        case NEXT_COLOR:
+          return {
+            ...state, index: index.length === state.index ? 0 : state.index + 1,
+          };
+        case PREVIOUS_COLOR:
+          return {
+            ...state, index: state.index === 0 ? index.length : state.index - 1,
+          }
+        default:
+          return state;
       }
+    };
 
-      #container {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
+    const store = Redux.createStore(reducer);
+    
+  </script>
+</body>
 
-      button {
-        height: 50px;
-        width: 200px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="container">
-      <p>Color: <span id="value">white</span></p>
-      <button id="previous">Previous color</button>
-      <button id="next">Next color</button>
-    </div>
-    <script>
-      const INITIAL_STATE = {
-        colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
-        index: 0,
-      };
-
-      const store = Redux.createStore(reducer);
-
-      const reducer = (state = INITIAL_STATE, action) => {
-        switch (action.type) {
-          case ALGO:
-            return {
-              ...state, 
-            };      
-          default:
-            return state;
-        }
-      };
-
-    </script>
-  </body>
 </html>
