Ex01-ReduxDNV: adiciona os eventListeners nos buttons

--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
@@ -62,7 +62,18 @@
     };
 
     const store = Redux.createStore(reducer);
-    
+
+    const prevBtn = document.getElementById('previous');
+    const nextBtn = document.getElementById('next');
+
+    prevBtn.addEventListener('onClick',()=>{
+      store.dispatch(actionNextColor());
+    });
+
+    nextBtn.addEventListener('onClick', ()=>{
+      store.dispatch(actionPreviousColor());
+    });
+
   </script>
 </body>
 
