Ex01-ReduxDNV: implementa Subscribe de forma que texto mostrado na tela e cor de fundo sejam alterados conforme valor armazenado no store eh modificado

--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
@@ -50,11 +50,11 @@
       switch (action.type) {
         case NEXT_COLOR:
           return {
-            ...state, index: state.index == state.colors.length ? 0 : state.index + 1,
+            ...state, index: state.index === state.colors.length - 1 ? 0 : state.index + 1,
           };
         case PREVIOUS_COLOR:
           return {
-            ...state, index: state.index === 0 ? state.colors.length : state.index - 1,
+            ...state, index: state.index === 0 ? state.colors.length - 1 : state.index - 1,
           }
         default:
           return state;
@@ -74,8 +74,16 @@
       store.dispatch(actionNextColor());
     });
 
-    store.subscribe(()=> {
+    const screenColor = document.querySelector('#value');
+    const container = document.querySelector('#container');
+
+    store.subscribe(()=> {      
       console.log(store.getState());
+      const colorFromReduxObj = store.getState();
+      const colorFromRedux = colorFromReduxObj.colors[colorFromReduxObj.index];
+      console.log(colorFromRedux);
+      screenColor.innerHTML = colorFromRedux;
+      container.style.backgroundColor = colorFromRedux;
     })
 
   </script>
