Ex01-ReduxDNV: implementa EventListener de forma que novo button ja fica 100% funcional

--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-ReduxDNV.html
@@ -76,7 +76,7 @@
           case CREATE_COLOR:
           return {            
             ...state, colors: [...state.colors, action.color ],
-            index: state.colors.length -1,
+            index: state.colors.length,
           }
         default:
           return state;
@@ -87,6 +87,7 @@
 
     const prevBtn = document.getElementById('previous');
     const nextBtn = document.getElementById('next');
+    const createBtn = document.getElementById('create');
 
     prevBtn.addEventListener('click', () => {
       store.dispatch(actionPreviousColor());
@@ -94,6 +95,10 @@
 
     nextBtn.addEventListener('click', () => {
       store.dispatch(actionNextColor());
+    });
+
+    createBtn.addEventListener('click', () => {
+      store.dispatch(actionCreateColor());
     });
 
     const screenColor = document.querySelector('#value');
