Ex02-ReduxDNV: cria actions para alterar os reducers, implementa cases nos respectivos reducers

--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
@@ -38,24 +38,49 @@
 
       const meuPrimeiroReducer = (state = ESTADO_INICIAL_1, action) => {
         switch (action.type) {
+          case CHANGE_NAME_REDUCER_1:
+            return {
+              ...state,
+              nome: 'Júlio',
+              sobrenome: 'Xablau',
+            };
           default:
             return state;
         }
       };
+
+      const CHANGE_NAME_REDUCER_1 = "CHANGE_NAME_REDUCER_1";
+
+      const actionChangeFirstReducer1 = () => ({        
+        type: CHANGE_NAME_REDUCER_1,
+      });
+
+      const CHANGE_NAME_REDUCER_2 = "CHANGE_NAME_REDUCER_2";
+
+      const actionChangeReducer2 = () => ({        
+        type: CHANGE_NAME_REDUCER_2,
+      });
 
       const meuSegundoReducer = (state = ESTADO_INICIAL_2, action) => {
         switch (action.type) {
+          case CHANGE_NAME_REDUCER_2:
+            return {
+              ...state,
+              name: 'Marisa',
+              sobrenome: 'Prestes',
+            }
           default:
             return state;
         }
       };
 
-      const rootReducer = combineReducers({
+      const rootReducer = Redux.combineReducers({
         meuPrimeiroReducer,
         meuSegundoReducer,
       });
 
       const store = Redux.createStore(rootReducer);
+
 
     </script>
   </body>
