--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
@@ -22,6 +22,8 @@
       <p>Cidade: <span id="cidade-2">São Paulo</span></p>
     </div>
     <script>
+      const { combineReducers, createReducer, createStore } = Redux;
+
       const ESTADO_INICIAL_1 = {
         nome: 'Rodrigo',
         sobrenome: 'Santos da Silva',
@@ -51,7 +53,7 @@
 
       const CHANGE_NAME_REDUCER_1 = "CHANGE_NAME_REDUCER_1";
 
-      const actionChangeFirstReducer1 = () => ({        
+      const actionChangeReducer1 = () => ({        
         type: CHANGE_NAME_REDUCER_1,
       });
 
@@ -74,13 +76,24 @@
         }
       };
 
-      const rootReducer = Redux.combineReducers({
+      const rootReducer = combineReducers({
         meuPrimeiroReducer,
         meuSegundoReducer,
       });
 
-      const store = Redux.createStore(rootReducer);
+      const store = createStore(rootReducer);
 
+      window.onload = () => {
+        setTimeout(() => {
+          store.dispatch(actionChangeReducer1())
+        }, 750);
+      };
+
+      window.onload = () => {
+        setTimeout(() => {
+          store.dispatch(actionChangeReducer2())
+        }, 1500);
+      };
 
     </script>
   </body>
