--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
@@ -1,100 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="https://unpkg.com/redux@latest/dist/redux.min.js"></script>
-  </head>
-  <body>
-    <div id="container">
-      <h1>Informações do primeiro Reducer:</h1>
-      <p>Nome: <span id="nome-1">Rodrigo</span></p>
-      <p>Sobrenome: <span id="sobrenome-1">Santos da Silva</span></p>
-      <p>Endereço: <span id="endereco-1">Rua Soldado Mathias, 765</span></p>
-      <p>Cidade: <span id="cidade-1">Belo Horizonte</span></p>
-    </div>
-    <div id="container">
-      <h1>Informações do segundo Reducer:</h1>
-      <p>Nome: <span id="nome-2">Bruna</span></p>
-      <p>Sobrenome: <span id="sobrenome-2">Santana Oliveira</span></p>
-      <p>Endereço: <span id="endereco-2">Rua Holanda, 332</span></p>
-      <p>Cidade: <span id="cidade-2">São Paulo</span></p>
-    </div>
-    <script>
-      const { combineReducers, createReducer, createStore } = Redux;
 
-      const ESTADO_INICIAL_1 = {
-        nome: 'Rodrigo',
-        sobrenome: 'Santos da Silva',
-        endereco: 'Rua Soldado Mathias, 765',
-        cidade: 'Belo Horizonte',
-      };
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script src="https://unpkg.com/redux@latest/dist/redux.min.js"></script>
+</head>
 
-      const ESTADO_INICIAL_2 = {
-        nome: 'Bruna',
-        sobrenome: 'Santana Oliveira',
-        endereco: 'Rua Holanda, 332',
-        cidade: 'São Paulo',
-      };
+<body>
+  <div id="container">
+    <h1>Informações do primeiro Reducer:</h1>
+    <p>Nome: <span id="nome-1">Rodrigo</span></p>
+    <p>Sobrenome: <span id="sobrenome-1">Santos da Silva</span></p>
+    <p>Endereço: <span id="endereco-1">Rua Soldado Mathias, 765</span></p>
+    <p>Cidade: <span id="cidade-1">Belo Horizonte</span></p>
+  </div>
+  <div id="container">
+    <h1>Informações do segundo Reducer:</h1>
+    <p>Nome: <span id="nome-2">Bruna</span></p>
+    <p>Sobrenome: <span id="sobrenome-2">Santana Oliveira</span></p>
+    <p>Endereço: <span id="endereco-2">Rua Holanda, 332</span></p>
+    <p>Cidade: <span id="cidade-2">São Paulo</span></p>
+  </div>
+  <script>
+    const { combineReducers, createReducer, createStore } = Redux;
 
-      const meuPrimeiroReducer = (state = ESTADO_INICIAL_1, action) => {
-        switch (action.type) {
-          case CHANGE_NAME_REDUCER_1:
-            return {
-              ...state,
-              nome: 'Júlio',
-              sobrenome: 'Xablau',
-            };
-          default:
-            return state;
-        }
-      };
+    const CHANGE_NAME_REDUCER_1 = "CHANGE_NAME_REDUCER_1";
+    const CHANGE_NAME_REDUCER_2 = "CHANGE_NAME_REDUCER_2";
 
-      const CHANGE_NAME_REDUCER_1 = "CHANGE_NAME_REDUCER_1";
+    const actionChangeReducer1 = () => ({
+      type: CHANGE_NAME_REDUCER_1,
+      nome: 'Braulio',
+      sobrenome: 'Xablau',
+    });
 
-      const actionChangeReducer1 = () => ({        
-        type: CHANGE_NAME_REDUCER_1,
-      });
+    const actionChangeReducer2 = () => ({
+      type: CHANGE_NAME_REDUCER_2,
+      nome: 'Mariana',
+      sobrenome: 'Ximenes',
+    });
 
-      const CHANGE_NAME_REDUCER_2 = "CHANGE_NAME_REDUCER_2";
+    const ESTADO_INICIAL_1 = {
+      nome: 'Rodrigo',
+      sobrenome: 'Santos da Silva',
+      endereco: 'Rua Soldado Mathias, 765',
+      cidade: 'Belo Horizonte',
+    };
 
-      const actionChangeReducer2 = () => ({        
-        type: CHANGE_NAME_REDUCER_2,
-      });
+    const ESTADO_INICIAL_2 = {
+      nome: 'Bruna',
+      sobrenome: 'Santana Oliveira',
+      endereco: 'Rua Holanda, 332',
+      cidade: 'São Paulo',
+    };
 
-      const meuSegundoReducer = (state = ESTADO_INICIAL_2, action) => {
-        switch (action.type) {
-          case CHANGE_NAME_REDUCER_2:
-            return {
-              ...state,
-              name: 'Marisa',
-              sobrenome: 'Prestes',
-            }
-          default:
-            return state;
-        }
-      };
+    const meuPrimeiroReducer = (state = ESTADO_INICIAL_1, action) => {
+      switch (action.type) {
+        case CHANGE_NAME_REDUCER_1:
+          return {
+            ...state,
+            nome: action.nome,
+            sobrenome: action.sobrenome,
+          };
+        default:
+          return state;
+      }
+    };
 
-      const rootReducer = combineReducers({
-        meuPrimeiroReducer,
-        meuSegundoReducer,
-      });
+    const meuSegundoReducer = (state = ESTADO_INICIAL_2, action) => {
+      switch (action.type) {
+        case CHANGE_NAME_REDUCER_2:
+          return {
+            ...state,
+            nome: action.nome,
+            sobrenome: action.sobrenome,
+          }
+        default:
+          return state;
+      }
+    };
 
-      const store = createStore(rootReducer);
+    const rootReducer = combineReducers({
+      meuPrimeiroReducer,
+      meuSegundoReducer,
+    });
 
-      window.onload = () => {
-        setTimeout(() => {
-          store.dispatch(actionChangeReducer1())
-        }, 750);
-      };
+    const store = createStore(rootReducer);
 
-      window.onload = () => {
-        setTimeout(() => {
-          store.dispatch(actionChangeReducer2())
-        }, 1500);
-      };
+    window.onload = () => {
+      setTimeout(() => {
+        store.dispatch(actionChangeReducer1())
+        store.dispatch(actionChangeReducer2())
+      }, 1000);
+    };
 
-    </script>
-  </body>
+    store.subscribe(() => {
+      console.log(store.getState());
+    });
+
+  </script>
+</body>
+
 </html>
