Ex02-ReduxDNV: adiciona um subscribe que atualiza o texto renderizado na tela conforme valor dentro do store

--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
@@ -95,8 +95,16 @@
       }, 1000);
     };
 
-    store.subscribe(() => {
-      console.log(store.getState());
+    const nome1 = document.getElementById('nome-1');
+    const sobrenome1 = document.getElementById('sobrenome-1');
+    const nome2 = document.getElementById('nome-2');
+    const sobrenome2 = document.getElementById('sobrenome-2');
+
+    store.subscribe(()=>{
+      nome1.innerText = store.getState().meuPrimeiroReducer.nome;
+      nome2.innerText = store.getState().meuSegundoReducer.nome;
+      sobrenome1.innerText = store.getState().meuPrimeiroReducer.sobrenome;
+      sobrenome2.innerText = store.getState().meuSegundoReducer.sobrenome;
     });
 
   </script>
