--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex02-ReduxDNV.html
@@ -95,16 +95,17 @@
       }, 1000);
     };
 
-    const nome1 = document.getElementById('nome-1');
-    const sobrenome1 = document.getElementById('sobrenome-1');
-    const nome2 = document.getElementById('nome-2');
-    const sobrenome2 = document.getElementById('sobrenome-2');
+    store.subscribe(() => {
+      const nome1 = document.getElementById('nome-1');
+      const sobrenome1 = document.getElementById('sobrenome-1');
+      const nome2 = document.getElementById('nome-2');
+      const sobrenome2 = document.getElementById('sobrenome-2');
+      const { meuPrimeiroReducer, meuSegundoReducer } = store.getState();
 
-    store.subscribe(()=>{
-      nome1.innerText = store.getState().meuPrimeiroReducer.nome;
-      nome2.innerText = store.getState().meuSegundoReducer.nome;
-      sobrenome1.innerText = store.getState().meuPrimeiroReducer.sobrenome;
-      sobrenome2.innerText = store.getState().meuSegundoReducer.sobrenome;
+      nome1.innerText = meuPrimeiroReducer.nome;
+      nome2.innerText = meuSegundoReducer.nome;
+      sobrenome1.innerText = meuPrimeiroReducer.sobrenome;
+      sobrenome2.innerText = meuSegundoReducer.sobrenome;
     });
 
   </script>
