--- a/3-back-end/bloco-19-docker/dia-3-orquestrando-containers-com-docker-compose/Fix01/primeiro-teste.html
+++ b/3-back-end/bloco-19-docker/dia-3-orquestrando-containers-com-docker-compose/Fix01/primeiro-teste.html
@@ -5,7 +5,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    </head>
    <body>
-      <h1>Minha primeira página rodando em Docker.</h1>
-      <p>Estou começando minha primeira página em HTML.</p>
+      <h1>Minha primeira página rodando em Docker, que maravilha.</h1>
+      <p>Estou começando minha primeira página em HTML e estou muito feliz! #VQV</p>
    </body>
 </html>
