--- a/3-back-end/bloco-19-docker/dia-3-orquestrando-containers-com-docker-compose/Ex01/missao_trybe.html
+++ b/3-back-end/bloco-19-docker/dia-3-orquestrando-containers-com-docker-compose/Ex01/missao_trybe.html
@@ -11,6 +11,7 @@
 <body>
   <h1>Missão da Trybe</h1>
   <p>Gerar oportunidade para pessoas</p>
+  <p>Nosso negócio é GENTE! #VQV</p>
 </body>
 
 </html>
